# cmake-example-exe

./: CMakeLists.txt  README.md  main.cpp
